# haskell-sensor

./: esp8266-json-read-write.cabal  procedures.glade  sensor.db
src/: ChartGenerator.hs  EspHandler.hs  GUI.hs  Main.hs  Sensor.hs  sensor.db
